[tool.poetry]
name = "asyncio-example"
version = "0.1.0"
description = "A set of Asynchronous Python3 Examples"
authors = ["Apau, Emmanuel <e@mechanicode.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.13.0"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
requests = "^2.27.1"
lorem = "^0.1.1"
flask = "1.1.4"
gevent = "^21.12.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
poetryup = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
